# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230423173206_create_idempotency_table.sql  20230423173535_relax_null_checks_on_idempotency.sql  20230423173729_create_newsletter_issues_table.sql  20230423173813_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs
