[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = "1.0.158"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.13.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.22"

[dev-dependencies]
reqwest = "0.11.14"
